move shell commands to gradle